# DawMaker

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  CUSTOMIZATION_GUIDE.md  GUIA_GESTOR_MODULOS.md  IMPLEMENTATION_SUMMARY.md  README.md  create_filmstrip.py
Include/: AudioEngine.h  AudioMeters.h  AudioProcessors.h  AudioScope.h  CustomButton.h  CustomButtons.h  CustomLookAndFeel.h  CustomRotarySlider.h  CustomTooltip.h  DraggableWidget.h  IntegratedTerminal.h  MainComponent.h  MainWindow.h  MidiKeyboardWidget.h  PluginExporter.h  ProjectManager.h  ProjectTemplates.h  SimpleAudioPlayer.h  VerticalFader.h  VisualBuilder.h  WidgetToolbar.h
Source/: AudioEngine.cpp  CustomButton.cpp  CustomLookAndFeel.cpp  CustomRotarySlider.cpp  DraggableWidget.cpp  DraggableWidgetExtensions.cpp  IntegratedTerminal.cpp  Main.cpp  MainComponent.cpp  MainWindow.cpp  MidiKeyboardWidget.cpp  PluginExporter.cpp  ProWidgetsImplementation.txt  ProWidgetsInit.txt  ProjectManager.cpp  ProjectTemplates.cpp  SimpleAudioPlayer.cpp  VisualBuilder.cpp  WidgetToolbar.cpp
